--- a/education.html
+++ b/education.html
@@ -89,7 +89,7 @@
         <h2>Associate of Information Technology</h2>
         <small>2017 - 2018</small>
         <p>Completed first year of degree before switching to associates of business. 
-          Received distinction in Computer Systems and Platform Technologies, User-Centred Design, Introduction to Programming and Database Concepts. 
+          Received distinction in Computer Systems and Platform Technologies, User-Centered Design, Introduction to Programming and Database Concepts. 
         </p>
         <span class="right-container-arrow"></span>
       </div>
