--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
   <main class="main-profile">
     <div class="main-profile-text">
       <h2>Profile</h2>
-          <p>I am a recent Bachelor of Marketing graduate at RMIT University with five years experience in the retail and consumer services
-          industry, entirely within client facing roles. I am eager to gain knowledge and experience in the Marketing and
-          Communications industry, with a specific focus on Digital Marketing.
+          <p>I am a recent graduate from RMIT University with a Bachelor of Marketing degree and five years of experience in the retail and
+            consumer services industry, all in client-facing roles. I am eager to gain knowledge and experience in the
+            marketing and communications industry, with a specific focus on digital marketing.
+            
           </p>
-          <p>
-            Since graduating from University I have continued
-          to develop my marketing skills, studying a range of topics including web devleopment,
-          video and image editing, data and analytics, digital marketing, SEO, and much more!
+          <p>Since graduating from university, I have continued to develop my marketing skills by studying a range of
+            topics, including web development, video/image editing, data and analytics, digital marketing, SEO, and
+            much more.
           </p>
     </div>
     <div class="main-profile-img">
